Fixed the carousel image from getting distorted

--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ main {
 
 .c-image {
   height: 400px;
+  object-fit:cover;
 }
 
 .over-lay {
